--- a/WebApp/Views/Contact/Edit.cshtml
+++ b/WebApp/Views/Contact/Edit.cshtml
@@ -1,33 +1,31 @@
-@model ContactModel
+@model WebApp.Models.ContactModel?
 
 @{
-    ViewBag.Title = "title";
     Layout = "_Layout";
 }
-
-<h2>Dodaj kontakt</h2>
-<form asp-action="Add" asp-controller="Contact" method="post">
+<h2>Edytuj kontakt</h2>
+<form asp-action="Edit" asp-controller="Contact" method="post">
     <div class="mb-3">
         <label class="form-label" asp-for="FirstName"></label>
         <input class="form-control" asp-for="FirstName"/>
         <span class="text-danger" asp-validation-for="FirstName"></span>
-    </div> 
-    
+    </div>
+
     <div class="mb-3">
         <label class="form-label" asp-for="LastName"></label>
         <input class="form-control" asp-for="LastName"/>
         <span class="text-danger" asp-validation-for="LastName"></span>
-    </div>    
+    </div>
     <div class="mb-3">
         <label class="form-label" asp-for="Email"></label>
         <input class="form-control" asp-for="Email"/>
         <span class="text-danger" asp-validation-for="Email"></span>
-    </div>    
+    </div>
     <div class="mb-3">
         <label class="form-label" asp-for="PhoneNumber"></label>
         <input class="form-control" asp-for="PhoneNumber"/>
         <span class="text-danger" asp-validation-for="PhoneNumber"></span>
-    </div>    
+    </div>
     <div class="mb-3">
         <label class="form-label" asp-for="BirthDate"></label>
         <input class="form-control" asp-for="BirthDate"/>
@@ -40,3 +38,5 @@
     </div>
     <button class="btn btn-outline-primary" type="submit">Zapisz</button>
 </form>
+
+
