--- a/WebApp/Views/Contact/Index.cshtml
+++ b/WebApp/Views/Contact/Index.cshtml
@@ -1,4 +1,4 @@
-@model System.Collections.Generic.Dictionary<int,WebApp.Models.ContactModel>
+@model List<ContactModel>
 
 @{
     ViewBag.Title = "title";
@@ -8,38 +8,49 @@
 <h2>Kontakty</h2>
 <a class="btn btn-primary" asp-action="Add" asp-controller="Contact">Dodaj kontakt</a>
 <h4>Lista kontaktów</h4>
-<table class="table">
-    <thread>
-        <tr>
-            <th>
-                Imię
-            </th>
-            <th>
-                Nazwisko
-            </th>
-            <th>
-                Akcje
-            </th>
-        </tr>
-    </thread>
-    <tbody>
+
+@if (Model.Count > 0)
+{
+
+    <table class="table">
+        <thread>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(l => l[0].FirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(l => l[0].LastName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(l => l[0].Category)
+                </th>
+                <th class="text-end">Operacje</th>
+            </tr>
+        </thread>
+        <tbody>
         @foreach (var entry in @Model)
         {
             <tr>
                 <td>
-                    @entry.Value.FirstName
+                    @entry.FirstName
                 </td>
                 <td>
-                    @entry.Value.LastName
+                    @entry.LastName
                 </td>
+                <td>@entry.Category.GetDisplayName()</td>
                 <td>
-                    <a class="btn btn-succes"asp-controller="Contact" asp-action="Edit" asp-route-id=@entry.Key>Edycja</a>
-                    <a class="btn btn-info"asp-controller="Contact" asp-action="Details" asp-route-id=@entry.Key>Szczegóły</a>
-                    <a class="btn btn-danger" asp-controller="Contact" asp-action="Delete" asp-route-id=@entry.Key>Usuń</a>
+                    <a class="btn btn-success"asp-controller="Contact" asp-action="Edit" asp-route-id=@entry.Id>Edycja</a>
+                    <a class="btn btn-info"asp-controller="Contact" asp-action="Details" asp-route-id=@entry.Id>Szczegóły</a>
+                    <a class="btn btn-danger" asp-controller="Contact" asp-action="Delete" asp-route-id=@entry.Id>Usuń</a>
                 </td>
             </tr>
         }
-        
-    </tbody>
-    
-</table>
+
+        </tbody>
+
+    </table>
+}
+else
+{
+    <h3 class="text-danger">Nie masz jeszcze kontaktów </h3>
+}
